removed redundant fields on transaction model
