# app/Http/Controllers/TransactionController.php
@@ -78,8 +78,6 @@ class TransactionController extends Controller
             'sender_account_id' => $account->id,
             'model' => $validated['model'] ?? null,
             'reference_number' => $validated['referenceNumber'] ?? null,
-            'amount' => $recipientAmount,
-            'currency' => $recipientCurrency,
             'sender_amount' => $senderAmount,
             'sender_currency' => $senderCurrency,
             'recipient_amount' => $recipientAmount,
@@ -203,8 +201,6 @@ class TransactionController extends Controller
             'senderName' => $transaction->sender->name,
             'model' => $transaction->model,
             'referenceNumber' => $transaction->reference_number,
-            'amount' => $transaction->amount,
-            'currency' => $transaction->currency,
             'senderAmount' => $transaction->sender_amount,
             'senderCurrency' => $transaction->sender_currency,
             'recipientAmount' => $transaction->recipient_amount,
